syntax = "proto3";

option go_package = "github.com/n0stack/n0core/provisioning/node/iproute2";

package n0stack.n0core.iproute2;

import "google/protobuf/empty.proto";

service Iproute2Service {
  rpc ApplyTap(ApplyTapRequest) returns (Tap) {}

  rpc DeleteTap(DeleteTapRequest) returns (google.protobuf.Empty) {}
}

message Tap {
  string name = 1;
  string bridge_name = 2;

  enum NetworkType {
    FLAT = 0;
    VLAN = 1;
    VXLAN = 2;
  }
  NetworkType type = 3;
  
  // FLATの場合は未定義(0)
  uint64 network_id = 4;
}

message ApplyTapRequest {
  Tap tap = 1;
}

message DeleteTapRequest {
  string name = 1;
}
